; ModuleID = '/home/carl/AnghaBench/libgit2/tests/config/extr_multivar.c_test_config_multivar__replace_multiple.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/config/extr_multivar.c_test_config_multivar__replace_multiple.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"config/config11\00", align 1
@_name = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"git://\00", align 1
@.str.2 = private unnamed_addr constant [33 x i8] c"git://git.otherplace.org/libgit2\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"otherplace\00", align 1
@cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_config_multivar__replace_multiple() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @git_config_open_ondisk(i32** %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32*, i32** %1, align 8
  %6 = load i32, i32* @_name, align 4
  %7 = call i32 @git_config_set_multivar(i32* %5, i32 %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  store i32 0, i32* %2, align 4
  %9 = load i32*, i32** %1, align 8
  %10 = load i32, i32* @_name, align 4
  %11 = load i32, i32* @cb, align 4
  %12 = call i32 @git_config_get_multivar_foreach(i32* %9, i32 %10, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i32 %11, i32* %2)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @cl_assert_equal_i(i32 %14, i32 2)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @git_config_free(i32* %16)
  %18 = call i32 @git_config_open_ondisk(i32** %1, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @cl_git_pass(i32 %18)
  store i32 0, i32* %2, align 4
  %20 = load i32*, i32** %1, align 8
  %21 = load i32, i32* @_name, align 4
  %22 = load i32, i32* @cb, align 4
  %23 = call i32 @git_config_get_multivar_foreach(i32* %20, i32 %21, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i32 %22, i32* %2)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32, i32* %2, align 4
  %26 = call i32 @cl_assert_equal_i(i32 %25, i32 2)
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_config_free(i32* %27)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_config_open_ondisk(i32**, i8*) #1

declare dso_local i32 @git_config_set_multivar(i32*, i32, i8*, i8*) #1

declare dso_local i32 @git_config_get_multivar_foreach(i32*, i32, i8*, i32, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_config_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
